welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:1: error: not found: value estSurBlanc
while (estSurBlanc()) {
       ^